--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 authors = [
     {name = "EricControls", email = "kp61dude@gmail.com"}
 ]
-license = {text = "MIT"}
+license = {file = "LICENSE"}
 requires-python = ">=3.8"
 classifiers = [
     "Development Status :: 4 - Beta",
@@ -21,17 +21,26 @@ classifiers = [
 
 dependencies = [
     "numpy>=1.21.0",  # For advanced interpolation calculations
+    "python-dateutils~=2.8.2"
 ]
+
+[project.urls]
+Homepage = "https://github.com/EricControls/cnc_warmup"
+Repository = "https://github.com/EricControls/cnc_warmup.git"
+Changelog = "https://github.com/EricControls/cnc_warmup/blob/main/CHANGELOG.md"
 
 [project.optional-dependencies]
 dev = [
-    "pytest>=7.0",
-    "black>=23.0",
-    "flake8>=6.0",
+    "pytest>=7.4.0",
+    "pytest-cov~=4.1.0",
+    "black>=23.9.1",
+    "flake8>=6.0.0",
     "mypy>=1.0"
 ]
-test = ["pytest-cov>=4.0"]
-docs = ["sphinx>=7.0", "sphinx-rtd-theme>=1.0"]
+
+docs = ["sphinx>=7.0",
+        "sphinx-rtd-theme>=1.0"
+]
 
 [project.scripts]
 cnc-warmup = "cnc_warmup.cli:main"
