--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ classifiers = [
 
 dependencies = [
     "numpy>=1.21.0",  # For advanced interpolation calculations
-    "python-dateutils~=2.8.2"
+    "python-dateutil~=2.8.2"
 ]
 
 [project.urls]
